; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_ctl.c_arena_i_purge_ctl.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_ctl.c_arena_i_purge_ctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64*, i64, i8*, i64*, i8*, i64)* @arena_i_purge_ctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arena_i_purge_ctl(i32* %0, i64* %1, i64 %2, i8* %3, i64* %4, i8* %5, i64 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i64* %1, i64** %9, align 8
  store i64 %2, i64* %10, align 8
  store i8* %3, i8** %11, align 8
  store i64* %4, i64** %12, align 8
  store i8* %5, i8** %13, align 8
  store i64 %6, i64* %14, align 8
  %17 = call i32 (...) @READONLY()
  %18 = call i32 (...) @WRITEONLY()
  %19 = load i32, i32* %16, align 4
  %20 = call i32 @MIB_UNSIGNED(i32 %19, i32 1)
  %21 = load i32*, i32** %8, align 8
  %22 = call i32 @tsd_tsdn(i32* %21)
  %23 = load i32, i32* %16, align 4
  %24 = call i32 @arena_i_decay(i32 %22, i32 %23, i32 1)
  store i32 0, i32* %15, align 4
  br label %25

25:                                               ; preds = %7
  %26 = load i32, i32* %15, align 4
  ret i32 %26
}

declare dso_local i32 @READONLY(...) #1

declare dso_local i32 @WRITEONLY(...) #1

declare dso_local i32 @MIB_UNSIGNED(i32, i32) #1

declare dso_local i32 @arena_i_decay(i32, i32, i32) #1

declare dso_local i32 @tsd_tsdn(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
